# uspto-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release-image.yml
docs/: PPUBS_FIELDS.md
src/: auth.py  config.py  logging_filters.py  server.py  uspto_client.py
tests/: test_server.py
tests/baseline/: v1.5.1_20260523.md
